# TransEcho

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_EN.md  package-lock.json  package.json
.github/: release.yml
.github/workflows/: build.yml  release-cut.yml  release-publish.yml
docs/analysis/: PRD.md
src/: app.html
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proto/common/: events.proto  rpcmeta.proto
src-tauri/proto/products/understanding/ast/: ast_service.proto
src-tauri/proto/products/understanding/base/: au_base.proto
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/audio/: capture.rs  capture_input.rs  capture_macos.rs  capture_windows.rs  device.rs  mod.rs  output_resample.rs  output_router.rs  playback.rs  resample.rs  time_stretch.rs  time_stretch_backend.rs  time_stretch_soundtouch.rs  time_stretch_wsola.rs  types.rs
src-tauri/src/transport/: client.rs  codec.rs  mod.rs
src/lib/: i18n.ts
src/routes/: +page.svelte
src/routes/settings/: +page.svelte
tmp/clang-module-cache/: PackageDescription-19SJ2ZUYTGABS.swiftmodule
tmp/clang-module-cache/2VGAJDPQ9CM9G/: SwiftShims-2IMTS4WWRU7VJ.pcm  _SwiftConcurrencyShims-2IMTS4WWRU7VJ.pcm
tmp/clang-module-cache/4H4IDQE0Q2XW/: SwiftShims-2IMTS4WWRU7VJ.pcm  _SwiftConcurrencyShims-2IMTS4WWRU7VJ.pcm
