[package]
name = "transecho"
version = "0.1.1"
description = "TransEcho - 桌面端实时同声传译"
edition = "2021"

[lib]
name = "transecho_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture
rubato = "0.16"

# Audio playback (TTS)
rodio = "0.19"

# Transport
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
prost = "0.13"
uuid = { version = "1", features = ["v4"] }
http = "1"
futures-util = "0.3"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Platform: macOS audio capture (ScreenCaptureKit)
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1.5", features = ["macos_14_0"] }

# Platform: Windows audio capture (WASAPI loopback)
[target.'cfg(target_os = "windows")'.dependencies]
cpal = "0.15"
